// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-Axmtr icvSBp"
>
  <li
    className="sc-AxmLO KPRyz"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKVi iEZZYd"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-AxmLO KPRyz"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKVi iEZZYd"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-AxmLO KPRyz"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKVi iEZZYd"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-Axmtr icvSBp"
>
  <li
    className="sc-AxmLO ihTrP"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKVi iEZZYd"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-AxmLO ihTrP"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKVi iEZZYd"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-AxmLO ihTrP"
    onClick={[Function]}
  >
    <span
      className="sc-fzqKVi iEZZYd"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
